xyuv/src/config-parser/minicalc/minicalc.cpp
/* Generated by re2c 0.13.5 on Tue May  9 14:59:33 2017 */
#line 1 "minicalc.re"
/*
 * The MIT License (MIT)
 *
 * Copyright (c) 2015-2017 Stian Valentin Svedenborg
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */

#include "minicalc.h"
#include "parser.h"
#include "ast.h"
#include <cassert>
#include <iostream>
#include <stdexcept>

MiniCalc::MiniCalc(const std::string & expression)
: expression(expression)
{
    parse_expression(expression);
}

MiniCalc::~MiniCalc() = default;

const uint64_t * MiniCalc::get_variable( const std::string & variable_name ) const {
    if (!variables) {
        return nullptr;
    }
    else {
        auto it = variables->find(variable_name);
        if (it == variables->end()) {
            return nullptr;
        }
        else {
            return &(it->second);
        }
    }
}


uint64_t MiniCalc::evaluate(const std::unordered_map<std::string, uint64_t> * variables) const {

    this->variables = variables;

    if (!parse_errors.empty()) {
        std::cout << "Parse error in expression: '" << expression << "'" << std::endl;
        for (auto & msg : parse_errors ) {
            std::cout << "  " << msg << std::endl;
        }
        return -1;
    }

    // Clear old runtime_errors
    runtime_errors.clear();
    int result = -1;
    try {
        result = root->evaluate();
    } catch( std::runtime_error & e ) {
        runtime_error(e.what());
    }

    // If the evaluation encountered run-time errors they are recorded here.
    if (!runtime_errors.empty()) {
        std::cout << "Could not evaluate expression: '" << expression << "'" << std::endl;
        for (auto & msg : runtime_errors ) {
            std::cout << "  " << msg << std::endl;
        }
        return -1;
    }

    return result;
}

void MiniCalc::set_root(node *node) {
    root.reset(node);
}

void MiniCalc::parse_error(const std::string & msg) const {
    parse_errors.push_back(msg);
}

void MiniCalc::runtime_error(const std::string & msg) const {
    runtime_errors.push_back(msg);
}

int MiniCalc::parse_expression(const std::string & expression)
{
    #define YYCTYPE         char
    int errorstate = 0;
	const char *YYCURSOR = expression.c_str();
	const char * const YYLIMIT  = YYCURSOR + expression.size() + 1 ;
    //const char * YYMARKER = NULL;
    //(void)YY


#define YYFILL(n)		{  }

    void * parser = ParseAlloc(malloc);

	for(;;)
	{

	    const char *token_begin = YYCURSOR;

#line 123 "<stdout>"
{
	YYCTYPE yych;

	if ((YYLIMIT - YYCURSOR) < 6) YYFILL(6);
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy38;
	case '\t':
	case ' ':	goto yy36;
	case '!':	goto yy28;
	case '%':	goto yy18;
	case '&':	goto yy34;
	case '(':	goto yy20;
	case ')':	goto yy22;
	case '*':	goto yy14;
	case '+':	goto yy10;
	case ',':	goto yy24;
	case '-':	goto yy12;
	case '/':	goto yy16;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy7;
	case '<':	goto yy30;
	case '=':	goto yy26;
	case '>':	goto yy32;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'c':
	case 'd':
	case 'e':
	case 'g':
	case 'h':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy9;
	case 'b':	goto yy6;
	case 'f':	goto yy5;
	case 'i':	goto yy2;
	case 't':	goto yy4;
	case '|':	goto yy35;
	default:	goto yy40;
	}
yy2:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'f':	goto yy74;
	case 'n':	goto yy76;
	default:	goto yy58;
	}
yy3:
#line 143 "minicalc.re"
	{
        Token * tok = new Token;
        tok->identifier = std::string(token_begin, YYCURSOR);
        Parse(parser, TOK_IDENTIFIER, tok, this);
        continue;
    }
#line 226 "<stdout>"
yy4:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy70;
	default:	goto yy58;
	}
yy5:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy65;
	default:	goto yy58;
	}
yy6:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy61;
	default:	goto yy58;
	}
yy7:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy60;
yy8:
#line 133 "minicalc.re"
	{
	                char * lend = NULL;
	                Token * tok = new Token;
                    tok->value = (int)strtol(token_begin, &lend, 10);
	                assert(lend == YYCURSOR);

	                Parse(parser, TOK_INT, tok, this);
	                continue;
	            }
#line 260 "<stdout>"
yy9:
	yych = *++YYCURSOR;
	goto yy58;
yy10:
	++YYCURSOR;
#line 150 "minicalc.re"
	{   Parse(parser, TOK_PLUS, nullptr, this);continue;}
#line 268 "<stdout>"
yy12:
	++YYCURSOR;
#line 151 "minicalc.re"
	{   Parse(parser, TOK_MINUS, nullptr, this);continue;}
#line 273 "<stdout>"
yy14:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '*':	goto yy55;
	default:	goto yy15;
	}
yy15:
#line 152 "minicalc.re"
	{   Parse(parser, TOK_MUL, nullptr, this);continue;}
#line 283 "<stdout>"
yy16:
	++YYCURSOR;
#line 153 "minicalc.re"
	{   Parse(parser, TOK_DIV, nullptr, this); continue;}
#line 288 "<stdout>"
yy18:
	++YYCURSOR;
#line 154 "minicalc.re"
	{   Parse(parser, TOK_MOD, nullptr, this); continue;}
#line 293 "<stdout>"
yy20:
	++YYCURSOR;
#line 156 "minicalc.re"
	{   Parse(parser, TOK_LPAREN, nullptr, this); continue; }
#line 298 "<stdout>"
yy22:
	++YYCURSOR;
#line 157 "minicalc.re"
	{   Parse(parser, TOK_RPAREN, nullptr, this); continue; }
#line 303 "<stdout>"
yy24:
	++YYCURSOR;
#line 158 "minicalc.re"
	{   Parse(parser, TOK_COMMA, nullptr, this); continue; }
#line 308 "<stdout>"
yy26:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy53;
	default:	goto yy27;
	}
yy27:
#line 176 "minicalc.re"
	{	errorstate = 1; break; }
#line 318 "<stdout>"
yy28:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy51;
	default:	goto yy29;
	}
yy29:
#line 166 "minicalc.re"
	{   Parse(parser, TOK_LOGIC_NEG, nullptr, this); continue; }
#line 328 "<stdout>"
yy30:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy49;
	default:	goto yy31;
	}
yy31:
#line 162 "minicalc.re"
	{   Parse(parser, TOK_LOGIC_LT, nullptr, this); continue; }
#line 338 "<stdout>"
yy32:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy47;
	default:	goto yy33;
	}
yy33:
#line 163 "minicalc.re"
	{   Parse(parser, TOK_LOGIC_GT, nullptr, this); continue; }
#line 348 "<stdout>"
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
	case '&':	goto yy45;
	default:	goto yy27;
	}
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case '|':	goto yy43;
	default:	goto yy27;
	}
yy36:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy42;
yy37:
#line 171 "minicalc.re"
	{   continue; }
#line 368 "<stdout>"
yy38:
	++YYCURSOR;
#line 172 "minicalc.re"
	{
                    Parse(parser, 0, nullptr, this);
                    break;
                }
#line 376 "<stdout>"
yy40:
	yych = *++YYCURSOR;
	goto yy27;
yy41:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy42:
	switch (yych) {
	case '\t':
	case ' ':	goto yy41;
	default:	goto yy37;
	}
yy43:
	++YYCURSOR;
#line 168 "minicalc.re"
	{   Parse(parser, TOK_LOGIC_OR, nullptr, this); continue; }
#line 394 "<stdout>"
yy45:
	++YYCURSOR;
#line 167 "minicalc.re"
	{   Parse(parser, TOK_LOGIC_AND, nullptr, this); continue; }
#line 399 "<stdout>"
yy47:
	++YYCURSOR;
#line 165 "minicalc.re"
	{   Parse(parser, TOK_LOGIC_GE, nullptr, this); continue; }
#line 404 "<stdout>"
yy49:
	++YYCURSOR;
#line 164 "minicalc.re"
	{   Parse(parser, TOK_LOGIC_LE, nullptr, this); continue; }
#line 409 "<stdout>"
yy51:
	++YYCURSOR;
#line 161 "minicalc.re"
	{   Parse(parser, TOK_LOGIC_NE, nullptr, this); continue; }
#line 414 "<stdout>"
yy53:
	++YYCURSOR;
#line 160 "minicalc.re"
	{   Parse(parser, TOK_LOGIC_EQ, nullptr, this); continue; }
#line 419 "<stdout>"
yy55:
	++YYCURSOR;
#line 155 "minicalc.re"
	{   Parse(parser, TOK_POW, nullptr, this); continue; }
#line 424 "<stdout>"
yy57:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy58:
	switch (yych) {
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '[':
	case ']':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy57;
	default:	goto yy3;
	}
yy59:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy60:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy59;
	default:	goto yy8;
	}
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy62;
	default:	goto yy58;
	}
yy62:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy63;
	default:	goto yy58;
	}
yy63:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '[':
	case ']':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy57;
	default:	goto yy64;
	}
yy64:
#line 131 "minicalc.re"
	{   Parse(parser, TOK_BOOL, nullptr, this);continue;}
#line 603 "<stdout>"
yy65:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy66;
	default:	goto yy58;
	}
yy66:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy67;
	default:	goto yy58;
	}
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy68;
	default:	goto yy58;
	}
yy68:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '[':
	case ']':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy57;
	default:	goto yy69;
	}
yy69:
#line 129 "minicalc.re"
	{   Parse(parser, TOK_FALSE, nullptr, this);continue;}
#line 696 "<stdout>"
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'u':	goto yy71;
	default:	goto yy58;
	}
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy72;
	default:	goto yy58;
	}
yy72:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '[':
	case ']':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy57;
	default:	goto yy73;
	}
yy73:
#line 128 "minicalc.re"
	{   Parse(parser, TOK_TRUE, nullptr, this);continue;}
#line 783 "<stdout>"
yy74:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '[':
	case ']':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy57;
	default:	goto yy75;
	}
yy75:
#line 127 "minicalc.re"
	{   Parse(parser, TOK_IF, nullptr, this);continue;}
#line 858 "<stdout>"
yy76:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy77;
	default:	goto yy58;
	}
yy77:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '[':
	case ']':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy57;
	default:	goto yy78;
	}
yy78:
#line 130 "minicalc.re"
	{   Parse(parser, TOK_INT, nullptr, this);continue;}
#line 939 "<stdout>"
}
#line 177 "minicalc.re"


	}

	ParseFree(parser, free);

	return errorstate;
}

// The resulting scanner can also be used as a standalone program to ease debugging.
#ifdef COMPILE_TEST_PROGRAM
#include <iostream>

int main(int argc, char **argv)
{
    using namespace std;

    char tmp[] =  "Trace: ";
    FILE * file = fopen("trace.txt", "w");
    ParseTrace(file, tmp);

    std::unordered_map<std::string, uint64_t> variables = {
        { "var1", 1},
        { "var2", 2},
        { "var3", 3},
    };

	if (argc > 1)
	{
        MiniCalc expr(argv[1]);
        cout << expr.evaluate(nullptr) << endl;

        return 0;
	}
	else
	{
	    std::cout << "error" << endl;
		return 1;
	}

    fclose(file);
}

#endif
